COMMIT:29012018:Correcting Read Me

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,5 +1,6 @@
 ##all messages for the users, to be mentioned below##
-err.constraint.boundary.1="Dear user, the robot cannot be placed outside the table. Please re-check the coordinates and rery";
-err.constraint.boundary.2="Dear user, the robot cannot make this move, to prevent it from falling off the table. Please re-check the coordinates and turn left/right before next move ";
-err.server.1="Oops, Server Malfunction";
-err.binding.1="Bad Data, Binding Error";
+err.constraint.boundary.1=Dear user, the robot cannot be placed outside the table. Please re-check the coordinates and rery.
+err.constraint.boundary.2=Dear user, the robot cannot make this move, to prevent it from falling off the table. Please re-check the coordinates and turn left/right before next move. 
+err.server.1=Oops, Server Malfunction.
+err.binding.1=Bad Data, Binding Error.
+err.robot.missing=Robot is Missing, Please try placing the robot first.
